--- a/contentStyles.css
+++ b/contentStyles.css
@@ -1,16 +1,13 @@
-.myTest {
-	color: red;
-}
 
 .hover_bkgr_hidden {
 	display: none;
 }
 
 /* Popup box BEGIN */
-.SiebelGo {
+#GHE_SiebelGo {
 	margin: 0px;
 	padding: 0px;
-    background:rgba(0,0,0,.4);
+    /*background:rgba(0,0,0,.4);*/
     /*cursor:pointer;*/
     display:none;
     height:100%;
@@ -27,31 +24,73 @@
 	background: linear-gradient(to bottom, rgba(0,47,75,0.5) 0%,rgba(220, 66, 37, 0.5) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002f4b', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
-.SiebelGo .helper {
+
+#GHE_SiebelGo h3 {
+	color: #999;
+	font-style: italic;
+	margin: 0px 0px 10px 0px;
+}
+
+#GHE_SiebelGo .helper {
     display:inline-block;
     height:100%;
     vertical-align:middle;
 }
-.SiebelGo > div {
+
+#GHE_SiebelGo .popup {
+	text-align: left;
     background-color: #fff;
     box-shadow: 10px 10px 60px #555;
     display: inline-block;
     height: auto;
-    max-width: 551px;
+    /* max-width: 551px; */
     min-height: 100px;
     vertical-align: middle;
-    width: 60%;
+    /* width: 60%; */
     position: relative;
     border-radius: 8px;
-    padding: 15px 5%;
+    /* padding: 15px 5%; */
+	padding: 10px;
 }
 
-.SiebelGo div {
+#GHE_SiebelGo div {
 	margin: 0px;
 	padding: 0px;
 }
 
-#gce_divText {
+#GHE_SiebelGo .popup .linksWrapperOutside {
+	display: flex;
+}
+
+#GHE_SiebelGo .popup .linksWrapperInside {
+	display: flex;
+	padding: 10px;
+	font-size: large;
+	margin-right: 10px;
+	border-radius: 5px;
+}
+
+#GHE_SiebelGo .popup .linksWrapperInside .linkTab {
+	border: 1px dashed #555;
+	padding: 0px 10px;
+	border-radius: 5px;
+}
+
+#GHE_SiebelGo .popup .linksWrapperInside:hover {
+	cursor: pointer;
+	background-color: lightskyblue;
+}
+
+#GHE_SiebelGo .popup .linksWrapperInside .linkTab:hover {
+	cursor: pointer;
+	background-color: lightgrey;
+}
+
+#GHE_SiebelGo .popup .linksWrapperInside .link {
+	margin-right: 10px;
+}
+
+/* #gce_divText {
 	width: 100%;
 }
 
@@ -64,7 +103,7 @@
 #gce_divText .link:hover {
 	cursor: pointer;
 	background-color: lightskyblue;
-}
+} */
 
 .popupCloseButton {
 	margin: 0px;
@@ -77,22 +116,18 @@
     font-family: arial;
     font-weight: bold;
     position: absolute;
-    top: -20px;
-    right: -20px;
-    font-size: 25px;
-    line-height: 30px;
+    top: -15px;
+    right: -15px;
+	color: #999;
+    font-size: 35px; /*25*/
+    line-height: 27px; /*30*/
     width: 30px;
     height: 30px;
     text-align: center;
 }
+
 .popupCloseButton:hover {
     background-color: #ccc;
 }
-.trigger_popup_fricc {
-    cursor: pointer;
-    font-size: 20px;
-    margin: 20px;
-    display: inline-block;
-    font-weight: bold;
-}
-/* Popup box BEGIN */
+
+/* Popup box END */
